# Nova-Language

./: .gitignore  LICENSE  LICENSE.txt  NovaCrypto.java  README.md  build.gradle.kts  build_nova.bat  description.txt.enc  main.py  nova_source.enc  pyproject.toml  settings.gradle.kts  setup.py
.github/workflows/: release.yml
examples/: arithmetic.md  bytecode_vm.md  core_demo.nv  full_example.md  hello.md  module_system.md  native_functions.md  scope_test.md  try_catch.md  variables.md  web_server_demo.nv
nova/ast/: nodes.py
nova/ast_visualizer/: __init__.py
nova/bytecode/: compiler.py  vm.py
nova/cli/: __init__.py  command_dispatcher.py  nova_console.py
nova/constant_folding/: __init__.py  folder.py
nova/interpreter/: environment.py  interpreter.py  nova_callable.py  nova_class.py  nova_enum.py  nova_interface.py
nova/lexer/: lexer.py  token.py  token_types.py
nova/module/: __init__.py
nova/native_bridge/: __init__.py
nova/parser/: parser.py
nova/symbol_table/: __init__.py
nova/type_inference/: __init__.py  inference.py
src/main/java/com/luminar/nova/: Main.java
src/main/java/com/luminar/nova/cli/: CommandDispatcher.java  NovaConsole.java
src/main/java/com/luminar/nova/interpreter/: BuiltinRegistry.java  Environment.java  Interpreter.java  Interpreter.java.v057.bak  NovaCallable.java  NovaClass.java  NovaEnum.java  NovaInstance.java  NovaInterface.java  NovaRuntimeError.java
src/main/java/com/luminar/nova/lexer/: Lexer.java  Token.java  TokenType.java
src/main/java/com/luminar/nova/parser/: Parser.java
src/main/java/com/luminar/nova/parser/ast/: BlockNode.java  BreakNode.java  ClassDeclNode.java  ContinueNode.java  DoWhileNode.java  EnumDeclNode.java  ExprNode.java  ExprStmtNode.java  ForNode.java  FunctionDeclNode.java  IfNode.java  InterfaceDeclNode.java  InterfaceMethodSig.java  Node.java  PrintNode.java  ProgramNode.java  ReturnNode.java  StructDeclNode.java  StructField.java  ThrowNode.java  TryCatchNode.java  VarDeclNode.java  WhileNode.java
tests/: 02_gui_styled.nv  03_web_server_verify.nv  04_advanced.nv  test.nova  test_interpreter.py  test_lexer.py  test_parser.py  test_samples.py
tests/samples/: arithmetic.nova  hello.nova  scope_test.nova
tools/: NovaRepoDesc.java
