[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-language"
version = "2.0.0"
authors = [
    {name = "Dearly Febriano Irwansyah", email = "dearlyfebrianoi@gmail.com"},
]
description = "Nova Language - A custom programming language with Python implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["nova", "language", "interpreter", "programming"]

[project.urls]
Homepage = "https://github.com/luminarydearx/Nova-Language"
Repository = "https://github.com/luminarydearx/Nova-Language"

[project.scripts]
nova = "nova.cli.nova_console:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]
