[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-language"
version = "2.0.0"
description = "Nova Programming Language - A modern language with Python implementation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dearly Febriano Irwansyah", email = "dearlyfebrianoi@gmail.com"},
]
keywords = ["programming-language", "compiler", "interpreter", "nova"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/luminarydearx/Nova-Language"
Repository = "https://github.com/luminarydearx/Nova-Language"
Documentation = "https://github.com/luminarydearx/nova-language-documentation"

[project.scripts]
nova = "main:main"

[tool.setuptools]
package-dir = {"nova" = "nova"}
packages = ["nova"]
